Blender 2.77 RC - Particle Hair Mode Issue #47676

Closed
opened 2016-03-03 13:17:32 +01:00 by Bennie · 10 comments

System Information
Microsoft Windows 10 Pro and Nvidia GeForce 845M

Blender Version
Broken: Blender 2.77 RC
Worked: Blender 2.77b

Short description of error

Comb Brush in Particle Edit Mode acts as a Cut Brush.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. Subdivide Cube to Level 3.

  2. Add a Particle System ---> Change operation from Emitter to Hair.

  3. Go to Particle Edit mode.

  4. Select Comb Brush.

  5. Notice that the Comb Brush cuts the hair instead of combing it when in use.

**System Information** Microsoft Windows 10 Pro and Nvidia GeForce 845M **Blender Version** Broken: Blender 2.77 RC Worked: Blender 2.77b **Short description of error** Comb Brush in Particle Edit Mode acts as a Cut Brush. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1. Subdivide Cube to Level 3. 2. Add a Particle System ---> Change operation from Emitter to Hair. 3. Go to Particle Edit mode. 4. Select Comb Brush. 5. Notice that the Comb Brush cuts the hair instead of combing it when in use.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Bennie self-assigned this 2016-03-03 13:17:32 +01:00
Author

Added subscriber: @bcgriffin

Added subscriber: @bcgriffin

#47718 was marked as duplicate of this issue

#47718 was marked as duplicate of this issue

Added subscriber: @mont29

Added subscriber: @mont29
Bennie was unassigned by Bastien Montagne 2016-03-03 14:14:21 +01:00
Bastien Montagne self-assigned this 2016-03-03 14:14:21 +01:00

Gah… there’s something very wrong here, could even make it crash. :(

Gah… there’s something very wrong here, could even make it crash. :(

Bisected to e4e21480d6

Most likely a bad default value of tool somewhere…

Bisected to e4e21480d6 Most likely a bad default value of tool somewhere…

This issue was referenced by 8ead4990d3

This issue was referenced by 8ead4990d33d7ae4c1ce739ef2776f0159dadffd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by d377f1445a

This issue was referenced by d377f1445a0f30181cb5a39be0da6be3461ed3e2

Added subscriber: @Ryker-2

Added subscriber: @Ryker-2
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47676
No description provided.